[package]
name = "livekit-text-egress-actor"
version = "0.1.0"
edition = "2021"
default-run = "livekit-text-egress-actor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-rt = "2.9.0"
actix-web = "4.5.1"
chrono = "0.4.37"
dotenvy = "0.15.7"
env_logger = "0.11.3"
envy = "0.4.2"
livekit = { git="https://github.com/livekit/rust-sdks.git", package="livekit", features = ["rustls-tls-native-roots"] }
livekit-api = {git="https://github.com/livekit/rust-sdks.git", package="livekit-api" }
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["json"], optional = true }
rusoto_core = { version = "0.48.0", default_features = false, features = ["rustls"] }
rusoto_credential = "0.48.0"
rusoto_s3 = { version = "0.48.0", default_features = false, features = ["rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tempdir = "0.3.7"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }


[features]
client = [
    "reqwest"
]
